--- a/MM856 - Grafteori/Introduktion.tex
+++ b/MM856 - Grafteori/Introduktion.tex
@@ -2,9 +2,7 @@
 
 Disse noter er til kurset MM856 - Grafteori. Der er tre primære kilder til disse noter:
 \begin{itemize}
-  \item Forelæsninger - Anders Yeo
-  \item Introduction to Graph Theory - Douglas West (Pearson, 2. udgave)
-  \item Digraphs: Theory, Algorithms and Applications - Bang-Jensen, Gutin (Springer, 2. udgave)
+	\item Forelæsninger - Akbar Davoodi
+	\item Introduction to Graph Theory - Douglas West (Pearson, 2. udgave)
+	\item Digraphs: Theory, Algorithms and Applications - Bang-Jensen, Gutin (Springer, 2. udgave)
 \end{itemize}
-
-Jeg vil forsøge at holde mig til at referere til kilderne ved deres forfatters efternavn (Yeo, West, Bang-Jensen \& Gutin).
