--- a/Opgaver/GrafTeori.tex
+++ b/Opgaver/GrafTeori.tex
@@ -1,7 +1,223 @@
-\chapter{GrafTeori}
+\chapter{Graf Teori}
+
+\section{Chapter 1.1}
+
+\noindent
+\textbf{Exercise 1.1.6}\\
+\noindent
+\textit{Determine whether the graph below decomposes into copies of $P_{4}$.}
+It does. See:
+
+\begin{center}
+	\begin{tikzpicture}[node distance={30mm}, thick, main/.style = {draw, circle}]
+		\node[main] (1) {};
+		\node[main] (2) [right=4cm of 1] {};
+		\node[main] (3) [below of=1] {};
+		\node[main] (4) [right=4cm of 3] {};
+		\node[main] (5) [above right=13mm and 1cm of 3] {};
+		\node[main] (6) [above left=13mm and 1cm of 4] {};
+		\draw[-, red] (1) to node {} (2);
+		\draw[-, red] (1) to node {} (3);
+		\draw[-, red] (2) to node {} (4);
+
+		\draw[-, blue] (3) to node {}(5);
+		\draw[-, blue] (4) to node {}(6);
+		\draw[-, blue] (3) to node {}(4);
+
+		\draw[-, green] (1) to node {}(5);
+		\draw[-, green] (5) to node{}(6);
+		\draw[-, green] (6) to node{}(2);
+	\end{tikzpicture}
+\end{center}
+
+\noindent
+\textbf{Exercise 1.1.10}\\
+\noindent
+\textit{Prove or disprove: The complement of a simple disconnected graph must be connected.}
+
+True. Given 2 non-adjacent vertices in $G$; $u, v$ if these are \textbf{not} connected in $G$ they must be in $\overline{G}$. We know such two vertices exist given the non-closedness. Any $z \in V(G) \setminus \{v, u\}$ not connected to $u,v$ will now be connected as well. Assuming the graph can be split up to $k$ components, ,each of the components will now be connected. As one vertex would connect to $k-1$ times the minimum amount of other vertices in a component, the graph would be connected.
+
+Another way to see this, is that if two vertices were not connected in each their component, then they would be connected now. And now enough with that, but say $u$ is in component $A$ while $v$ is in component $B$. Because they are in each component, all vertices in $A$ will become adjacent to $v$, and vice versa. Because of this all vertices are now connected.
+\\\\
+\noindent
+\textbf{Exercise 1.1.23}\\
+\noindent
+
+If time.
+\\\\
+\noindent
+\textbf{Exercise 1.1.26}\\
+\noindent
+\textit{Let $G$ be a graph with girth $4$ in which every vertex has degree $k$. Prove that $G$ has at least $2k$ vertices. Determine all such graphs with exactly $2k$ vertices.}
+
+Given a $v \in V(G)$, $|N(v)| = 4$, and form an independent set. THis means that $\forall n \in N(v)$, $d(n) = k$. We know that each of the neighbours also have $k$ neighbours each. Therefore, we have so far encountered $1 + k + k(k-1)$ vertices. 1 is for the start vertex, $k$ for each of its neighbours, and $k(k-1)$ for the neighbours neighbours. We take $k-1$ as we do not regard the start vertex. That is equal to $1 + k + k^{2} -k \ge 2k$. To be clear, if $k = 2$, then $1 + 2 + 2^{2} - 2 = 3 + 4 - 2 = 5$. If $k = 1$ a girth of $4$ is impossible.
+
+In the exercise class he showed that if $y \leftrightarrow x$, then $N(y) \cap N(x) = \emptyset$. This is $2k$. For the construction, the answer is bipartite graphs, $K_{k,k}$
+\\\\
+\noindent
+\textbf{Exercise 1.1.38}\\
+\noindent
+\textit{Let $G$ be a simple graph in which every vertex has degree 3. Prove that $G$ decomposes into claws if and only if $G$ is bipartite.}\\\\
+\noindent
+\textbf{If $G$ is bipartite, it decomposes into claws}.\\
+\noindent
+For a graph to decompose into claws, we can see it as a vertex with 3 edges emerging from it. As the graph is $3$-regular, we can find these claws in bipartite graphs. Given a vertex in set $A$ (or $B$), take that along with its 3 neighbours. Continue doing this for all $v \in A$, and you have $3|V(G)|$ claws.\\\\
+\noindent
+\textbf{If $G$ decomposes into claws, $G$ is bipartite.}\\
+\noindent
+Each claw is itself a bipartite structure, $K_{1,3}$ and thus can only be decomposed by other bipartite graphs.
+
+
+\section{Chapter 1.2}
+\noindent
+\textbf{Exercise 1.2.20}\\
+\noindent
+\textit{Let $v$ be a cut-vertex of a simple graph $G$. Prove that $\overline{G} - v$ is connected.}
+
+As $v$ is a cut-vertex, $N(v)$ is not connected. We can follow the same logic from 1.1.10 showing that $N(v)$ would now be connected, as is the same, with the rest of the graph. We can also just imagine that $G$ is now not connected, and follow the same reasoning.
+\\\\
+\noindent
+\textbf{Exercise 1.2.25}\\
+\noindent
+\textit{Use ordinary induction on the number of edges to prove that absence of odd cycles is a sufficient condition for a graph to be bipartite.}\\\\
+\noindent
+\textbf{Base Case: $e(G) = 0$}: \\
+\noindent
+If a graph has no edges it is trivially bipartite, and has no odd cycles.\\
+\noindent
+\textbf{Induction hypothesis}: Any graph with $e(G)$ edges that contains no odd cycles is bipartite.\\
+\noindent
+\textbf{Inductive Step}:\\
+\noindent
+We show that a graph with $e(G) + 1$ edges and no odd cycles is bipartite.
+
+Let $G = (V,E)$ be a graph with $e(G) + 1$ edges and no odd cycles. Let $e = uv$ be an arbitrary edge. The removal of $e$ from $G$ results in a subgraph $G'$ with $e(G)$ edges. By the induction hypothesis, since $G'$ contains no odd cycles, $G'$ is bipartite.
+
+If $e$ is a cut-edge, the graph $G'$ consists now of two disconnected components, each of which is bipartite. Combining these sets, such that the endpoints of $e$ lie in each their bipartition makes the graph bipartite.
+
+If $e$ is not a cut-edge, removing it leaves a connected graph $G'$, which is bipartite by the induction hypothesis.
+\\\\
+\noindent
+\textbf{Exercise 1.2.26}\\
+\noindent
+
+
+\section{Chapter 1.3}
+\noindent
+\textbf{Exercise 1.3.12}\\
+\noindent
+\textit{Prove that an even graph has no cut-edge. For each $k \ge 1$, construct a $2k+1$ regular simple graph having a cut-edge.}
+
+An even graph must have at least $2k, k \in \mathbb{N}$ edges. This implies that every vertex is part of a cycle, and a vertex or edge cannot be a cut-vertex or edge if it is a part of a cycle. This is by proposition 1.2.27: every even graph decomposes into cycles, and by theorem 1.2.14: an edge cannot be a cut-edge if in a cycle.
+\\\\
+\noindent
+\textbf{Exercise 1.3.50}\\
+\noindent
+\textit{For $n \ge 3$, determine the minimum number of edges in a connected $n$-vertex graph in which every edge belongs to a triangle.}
+
+\[T_{n} = \lceil \frac{3(n-1)}{2} \rceil\]
+
+The minimum number is at least $T(n)$. If $n$ is odd we can just start with $K_{3}$, and then add 2 vertices and edges in such a fashion that it creates a new triangle. Thus we get the correct number from $T(n)$. If $n$ is even, we start with $n = 4$, and then add two vertices following the same strategy as with odd $n$.
+
+$T_{n}$ is minimal. We prove by induction.
+
+\textit{Basis: $n=3$}: The triangle is the smallest such graph, and $T_{n}$ is true here.
+
+\textit{Induction step: $n \rightarrow n+1$}: $T_{n} \le \lceil \frac{3(n-1)}{2} \rceil$. $2T_{n} = \sum_{v \in V} \delta(v) \ge 3n \Rightarrow T_{n} \ge \frac{3n}{2} \Rightarrow T_{n}$ must have a vertex with valency 0, 1, or 2.
+
+
+\section{Chapter 1.4}
+\noindent
+\textbf{Exercise 1.4.8}\\
+\noindent
+\textit{Prove that there is an $n$-vertex tournament with $d^{-}(v) = d^{+}(v) \forall v \in V(G)$ if and only if $n$ is odd.}\\
+
+First, if $n$ is even there is an odd amount of edges, and therefore $d^{+}(v) \ne d^{-}(v) \forall v \in V(G)$. For an example, theorem 1.2.26 says that $K_{n}, n = 2k+1$ has an Eulerian graph, thus we can orient according to the trial. I.e., if going from A to B in the graph, we add a directed edge going from A to B. This way, whenever we go into a vertex, we will come out of it again, and the other way around.
+\\\\
+\noindent
+\textbf{Exercise 1.4.10}\\
+\noindent
+\textit{Prove that a digraph is strongly connected if and only if for each partition of the vertex set into nonempty sets $S$ and $T$, there is an edge from $S$ to $T$.}\\
+\noindent
+$\Rightarrow$\\
+Follows the same logic. If it was not possible, the underlying graph would not be connected.\\
+\noindent
+$\Leftarrow$\\
+If for each partition set there is an edge from $S$ to $T$, the underlying graph is \textbf{at least} connected, as this is ensured in every partition.
+It is strongly connected as there is always a path from $S$ to $T$ and vice versa.
+\\\\
+\noindent
+\textbf{Exercise 1.4.14}\\
+\noindent
+If time.
+\\\\
+\noindent
+\textbf{Exercise 1.4.38}\\
+\noindent
+\textit{For $n \in \mathbb{N}$, prove that there is an $n$-vertex tournament in which every vertex is a king if and only if $n \notin \{2, 4\}$}\\
+
+???
+
+
+
+\section{Chapter 2.1}
+\noindent
+\textbf{Exercise 2.1.5}\\
+\noindent
+\textit{Let $G$ be a graph. Prove that a maximal acyclic subgraph of $G$ consists of a spanning tree from each component of $G$.}
+
+As it is acyclic there are no cycles. If there is a cycle in a component, we do not add the edges making it a cycle. Thus it becomes a spanning tree.
+\\\\
+\noindent
+\textbf{Exercise 2.1.15}\\
+\noindent
+\textit{Let $G$ be a simple graph with diameter of at least 4. Prove that $\overline{G}$ has a diameter at most 2.}
+
+Consider two vertices, $u, v$ whose length is $\ge 4$. In $\overline{G}$ this is no longer true, as they will be neighbours. Therefore the length will be 2. This happens in general to all $k = 2, 3$. If $k = 1$ in $G$ there will be no line in $\overline{G}$, and thus will not be represented in the diameter.
+\\\\
+\noindent
+\textbf{Exercise 2.1.39}\\
+\noindent
+\textit{Let $G$ be a tree with $2k$ vertices of odd degree. Prove that $G$ decomposes into $k$ paths. (Hint: Prove the stronger result that claim holds for all forests.)}\\
+Missing.
+\section{Chapter 2.2}
+\noindent
+\textbf{Exercise 2.2.1}\\
+\noindent
+\textit{Determine which trees have Prüfer codes that (a) contain only one value, (b) contain exactly two values, or (c) have distinct values in all positions.}\\
+
+\begin{enumerate}
+	\item[(a).] Trees that have Prüfer codes which contain only one value are trees of order 3. Removing one vertex leave only one value in the code.
+	\item[(b).] Same logic applies here, but with order 4.
+\end{enumerate}
+\noindent
+\textbf{Exercise 2.2.7}\\
+\noindent
+\textit{Use Cayley's Formula to prove that the graph obtained from $K_{n}$ by deleting an edge has $(n-2)n^{n-3}$ spanning trees.}
+\\\\
+\noindent
+\textbf{Exercise 2.2.25}\\
+\noindent
+\textit{Prove that if $G$ is graceful and Eulerian, then $e(G)$ is congruent to 0 or 3 mod 4. (Hint: Sum the absolute edge differences (mod 2) in two different ways.)}
+\section{Chapter 2.3}
+\textit{Use Dijkstra’s algorithm to find the shortest path from v1 to all other
+	vertices in the below graph and use Kruskal’s algorithm to find a minimum
+	spanning tree in the below graph.}
+\section{Chapter 3.1}
+\noindent
+\textbf{Exercise 3.1.8}\\
+\noindent
+\textit{Prove or disprove: Every tree has at most one perfect matching.}
+\\\\
+\noindent
+\textbf{Exercise 3.1.21}\\
+\noindent
+\textit{Let $G$ be an $X,Y$-bigraph such that $|N(S) > |S|$ whenever $\emptyset \ne S \in X$. Prove that every edge of $G$ belongs to some matching that saturates $X$.}
+
+
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-engine: xetex
+%%% TeX-engine: luatex
 %%% TeX-command-extra-options: "-shell-escape"
 %%% TeX-master: "main"
 %%% End:
